[#79] Run ktlint under Java 17